--- a/youniverse/src/app/onboarding/welcome_screen/page.module.css
+++ b/youniverse/src/app/onboarding/welcome_screen/page.module.css
@@ -9,21 +9,21 @@
     align-items: center;
     position: absolute;
     z-index: 2;
-    bottom: 24rem;
+    bottom: 33rem;
     left: 50%;
     transform: translateX(-50%);
   }
 
 .authentication__buttons--stacked {
     flex-direction: column;
-    gap: 0.75rem;
+    gap: 0.5rem;
   }
 
 .modal__overlay {
   position: absolute;
   inset: 0;
   width: 100%;
-  height: 110%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
