--- a/youniverse/src/app/planet/page.module.css
+++ b/youniverse/src/app/planet/page.module.css
@@ -5,7 +5,7 @@
 
 .lumen {
   position: absolute;
-  top: 50%;
+  bottom: 20rem;
   left: 0;
   width: 100%;
   display: flex;
@@ -15,7 +15,7 @@
 
 .decorateButton {
   position: absolute;
-  bottom: -1.5rem;
+  bottom: 9rem;
   right: 0.5rem;
   transform: translateX(-50%);
   z-index: 2;
@@ -23,7 +23,7 @@
 
 .navigationBar {
   position: absolute;
-  bottom: -10rem;
+  bottom: 0rem;
   left: 0;
   width: 100%;
   z-index: 3;
